--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 
 <body>
-	<h1 class="red">Lærke Gade Villemoes</h1>
-	<h2 class="blue">Lærke Gade Villemoes</h2>
-	<h3 class="yellow">Lærke Gade Villemoes</h3>
+	<h1>Lærke Gade Villemoes</h1>
+	<h2>Lærke Gade Villemoes</h2>
+	<h3>Lærke Gade Villemoes</h3>
 	<h4>Lærke Gade Villemoes</h4>
 	<h5>Lærke Gade Villemoes</h5>
 	<h6>Lærke Gade Villemoes</h6>
